--- a/bonus/script.js bonus/index.html bonus/style.css
+++ b/bonus/script.js bonus/index.html bonus/style.css
@@ -11,6 +11,7 @@ document.addEventListener('DOMContentLoaded', () => {
   });
   document.body.appendChild(dropdown);
 
+  // Partie fait avec Mathis (DEBUT)
 
   const searchBar = document.createElement('input');
   searchBar.type = 'text';
@@ -25,7 +26,7 @@ document.addEventListener('DOMContentLoaded', () => {
   
   const resultList = document.createElement('ul');
   document.body.appendChild(resultList);
-
+// Partie fait avec Mathis (FIN)
   
   searchButton.addEventListener('click', () => {
     resultList.innerHTML = '';
